# rouwdi

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  README.md  rouwdi.toml.example
bootstrap/: compiler-payload-abi.toml  mir-payload-export-manifest.toml  provision-stage2-wasm-host-tooling.ps1  provision-wasi-sdk.ps1  rustc-private-target-pack.toml  tooling.toml  upstream-rustc-import.toml  wasi-sdk.lock.toml
bootstrap/rustc-codegen-llvm-probe/: Cargo.toml  build-target-llvm-closure.ps1  build-target-llvm-wrapper.ps1  rouwdi-lld-wasm-wrapper.cpp  run-host-probe.ps1  run-wasm-target-check.ps1  target-llvm-config.cmd  wasi-llvm-support-shims.c
bootstrap/rustc-codegen-llvm-probe/src/: main.rs
bootstrap/wasi-sdk-shims/include/: __struct_timespec.h  pwd.h  signal.h  stdlib.h  unistd.h
bootstrap/wasi-sdk-shims/include/bits/: errno.h  fcntl.h  ioctl.h  signal.h
bootstrap/wasi-sdk-shims/include/machine/: endian.h
bootstrap/wasi-sdk-shims/include/sys/: statvfs.h  wait.h
crates/rouwdi-cargo/: Cargo.toml
crates/rouwdi-cargo/src/: lib.rs
crates/rouwdi-compiler-payload-abi/: Cargo.toml
crates/rouwdi-compiler-payload-abi/src/: lib.rs
crates/rouwdi-compiletime/: Cargo.toml
crates/rouwdi-compiletime/src/: lib.rs
crates/rouwdi-contract/: Cargo.toml
crates/rouwdi-contract/src/: lib.rs
crates/rouwdi-engine/: Cargo.toml
crates/rouwdi-engine/src/: lib.rs
crates/rouwdi-engine/tests/: compiler_boundary.rs
crates/rouwdi-object/: Cargo.toml
crates/rouwdi-object/src/: lib.rs
crates/rouwdi-proof/: Cargo.toml
crates/rouwdi-proof/src/: lib.rs
crates/rouwdi-rustc/: Cargo.toml
crates/rouwdi-rustc-upstream/: Cargo.toml
crates/rouwdi-rustc-upstream/src/: lib.rs
crates/rouwdi-rustc/src/: lib.rs
crates/rouwdi-source/: Cargo.toml
crates/rouwdi-source/src/: lib.rs
crates/rouwdi-targets/: Cargo.toml
crates/rouwdi-targets/src/: lib.rs
crates/rouwdi-vfs/: Cargo.toml
crates/rouwdi-vfs/src/: lib.rs
crates/rouwdi-wasm/: Cargo.toml
crates/rouwdi-wasm/src/: lib.rs  main.rs  payloads.rs
crates/rouwdi-wasm/tests/: package_checkpoint.rs
crates/rouwdi-wasm/wit/: rouwdi.wit
examples/hello-dual/: Cargo.toml  rouwdi.toml
examples/hello-dual/src/: main.rs
fixtures/dependency_stdout/: Cargo.toml  rouwdi.toml
fixtures/dependency_stdout/printer/: Cargo.toml
fixtures/dependency_stdout/printer/src/: lib.rs
fixtures/dependency_stdout/src/: main.rs
fixtures/function_call/: Cargo.toml  rouwdi.toml
fixtures/function_call/src/: main.rs
fixtures/local_lib_call/: Cargo.toml  rouwdi.toml
fixtures/local_lib_call/helper/: Cargo.toml
fixtures/local_lib_call/helper/src/: lib.rs
fixtures/local_lib_call/src/: main.rs
fixtures/module_path/: Cargo.toml  rouwdi.toml
fixtures/module_path/src/: main.rs
fixtures/multiple_local_dependencies/: Cargo.toml  rouwdi.toml
fixtures/multiple_local_dependencies/alpha/: Cargo.toml
fixtures/multiple_local_dependencies/alpha/src/: lib.rs
fixtures/multiple_local_dependencies/beta/: Cargo.toml
fixtures/multiple_local_dependencies/beta/src/: lib.rs
fixtures/multiple_local_dependencies/src/: main.rs
fixtures/no_deps_empty_main/: Cargo.toml  rouwdi.toml
fixtures/stdout_hello/: Cargo.toml  rouwdi.toml
fixtures/stdout_hello/src/: main.rs
fixtures/transitive_local_dependency/: Cargo.toml  rouwdi.toml
fixtures/transitive_local_dependency/leaf/: Cargo.toml
fixtures/transitive_local_dependency/leaf/src/: lib.rs
fixtures/transitive_local_dependency/middle/: Cargo.toml
fixtures/transitive_local_dependency/middle/src/: lib.rs
fixtures/transitive_local_dependency/src/: main.rs
ref-repo/: AGENTS.md
runners/rouwdi/: Cargo.toml
runners/rouwdi/src/: main.rs
scripts/: package-dev.ps1  package.ps1  verify.ps1
