[workspace]
members = [
    "crates/rouwdi-cargo",
    "crates/rouwdi-compiletime",
    "crates/rouwdi-contract",
    "crates/rouwdi-engine",
    "crates/rouwdi-proof",
    "crates/rouwdi-rustc",
    "crates/rouwdi-rustc-upstream",
    "crates/rouwdi-source",
    "crates/rouwdi-targets",
    "crates/rouwdi-vfs",
    "crates/rouwdi-wasm",
    "runners/rouwdi",
]
resolver = "2"
exclude = ["examples/hello-dual", "third_party/rust/src/tools/rust-analyzer"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://example.invalid/rouwdi"
rust-version = "1.95"

[workspace.dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
rustc_lexer = { path = "third_party/rust/compiler/rustc_lexer" }
ra_parser = { package = "parser", path = "third_party/rust/src/tools/rust-analyzer/crates/parser" }
wasmi = { version = "2.0.0-beta.2", default-features = false, features = ["stable", "std", "prefer-btree-collections"] }

[profile.test]
incremental = false
