[package]
name = "rouwdi-rustc-codegen-llvm-probe"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
rustc_codegen_llvm = { path = "../../third_party/rust/compiler/rustc_codegen_llvm" }
rustc_feature = { path = "../../third_party/rust/compiler/rustc_feature" }
rustc_interface = { path = "../../third_party/rust/compiler/rustc_interface" }
rustc_session = { path = "../../third_party/rust/compiler/rustc_session" }
rustc_span = { path = "../../third_party/rust/compiler/rustc_span" }
rustc_target = { path = "../../third_party/rust/compiler/rustc_target" }
rouwdi-object = { path = "../../crates/rouwdi-object" }
hex = "0.4"
serde_json = "1"
sha2 = "0.10"
