[package]
name = "rouwdi-compiletime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
rouwdi-cargo = { path = "../rouwdi-cargo" }
rouwdi-vfs = { path = "../rouwdi-vfs" }
