[package]
name = "rouwdi-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rouwdi-cargo = { path = "../rouwdi-cargo" }
rouwdi-compiletime = { path = "../rouwdi-compiletime" }
rouwdi-contract = { path = "../rouwdi-contract" }
rouwdi-proof = { path = "../rouwdi-proof" }
rouwdi-rustc = { path = "../rouwdi-rustc" }
rouwdi-source = { path = "../rouwdi-source" }
rouwdi-targets = { path = "../rouwdi-targets" }
rouwdi-vfs = { path = "../rouwdi-vfs" }

[dev-dependencies]
tempfile = "3"
