[package]
name = "rouwdi-proof"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rouwdi-cargo = { path = "../rouwdi-cargo" }
rouwdi-compiletime = { path = "../rouwdi-compiletime" }
rouwdi-contract = { path = "../rouwdi-contract" }
rouwdi-rustc = { path = "../rouwdi-rustc" }
rouwdi-source = { path = "../rouwdi-source" }
rouwdi-targets = { path = "../rouwdi-targets" }
rouwdi-vfs = { path = "../rouwdi-vfs" }
