[package]
name = "rouwdi-rustc-upstream"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rustc_error_codes = { path = "../../third_party/rust/compiler/rustc_error_codes" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
