[package]
name = "rouwdi-rustc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
ra_parser.workspace = true
rouwdi-object.workspace = true
rouwdi-rustc-upstream = { path = "../rouwdi-rustc-upstream" }
rustc_lexer.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
