[package]
name = "rouwdi-targets"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rouwdi-rustc = { path = "../rouwdi-rustc" }
serde.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
rouwdi-contract = { path = "../rouwdi-contract" }
