[package]
name = "rouwdi-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rouwdi-assembly"
path = "src/main.rs"

[dependencies]
serde_json.workspace = true
serde.workspace = true
sha2.workspace = true
wasmi.workspace = true
rouwdi-engine = { path = "../rouwdi-engine" }
rouwdi-object.workspace = true
rouwdi-proof = { path = "../rouwdi-proof" }
rouwdi-rustc = { path = "../rouwdi-rustc" }
rouwdi-vfs = { path = "../rouwdi-vfs" }

[features]
default = ["embedded-mir-payload"]
embedded-mir-payload = []
